// Copyright 2021 Prysmatic Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package theqrl.qrl.v1alpha1;

import "proto/qrl/ext/options.proto";

option csharp_namespace = "TheQRL.QRL.V1alpha1";
option go_package = "github.com/theQRL/qrysm/proto/qrysm/v1alpha1;qrl";
option java_multiple_files = true;
option java_outer_classname = "SlasherProto";
option java_package = "org.theqrl.qrl.v1alpha1";
option php_namespace = "TheQRL\\QRL\\v1alpha1";

message HighestAttestation {
  uint64 validator_index = 1;
  uint64 highest_source_epoch = 2
  [ (theqrl.qrl.ext.cast_type) =
      "github.com/theQRL/qrysm/consensus-types/primitives.Epoch" ];
  uint64 highest_target_epoch = 3
  [ (theqrl.qrl.ext.cast_type) =
      "github.com/theQRL/qrysm/consensus-types/primitives.Epoch" ];
}